welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:6: error: type mismatch;
 found   : Unit
 required: Boolean
			if (isSummer == true) {
                        ^